--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bower": "^1.3.12",
     "express": "^4.12.2",
-    "jade": "^1.9.2"
+    "jade": "^1.9.2",
+    "mongoose": "^3.8.25"
   }
 }
