--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workspace",
+  "name": "jobfindgo",
   "version": "1.0.0",
   "description": "Job Finding App",
   "main": "index.js",
